force-app/main/default/objects/bofc__BOFCFieldsAnalyzerResult__c/bofc__BOFCFieldsAnalyzerResult__c.object-meta.xml
<CustomObject>
    <label>BOFCFieldsAnalyzerResult</label>
    <nameField>
        <label>BOFCFieldsAnalyzer	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCFieldsAnalyzerResult</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>