force-app/main/default/objects/bofc__BOFCFieldsAnalyzerResult__c/fields/bofc__BOFCFieldsAnalyzer__c.field-meta.xml
<CustomField>
    <fullName>bofc__BOFCFieldsAnalyzer__c</fullName>
    <label>BOFCFieldsAnalyzer</label>
    <referenceTo>bofc__BOFCFieldsAnalyzer__c</referenceTo>
    <relationshipLabel>BOFCFieldsAnalyzerResult</relationshipLabel>
    <relationshipName>BOFCFieldsAnalyzerResult</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>