force-app/main/default/objects/bofc__BOFCFieldsAnalyzerResult__c/fields/bofc__Field_Analyzer_Result_Name__c.field-meta.xml
<CustomField>
    <fullName>bofc__Field_Analyzer_Result_Name__c</fullName>
    <label>Field Analyzer Result Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>