force-app/main/default/objects/bofc__BOFCFieldsAnalyzerResult__c/fields/bofc__isCustom__c.field-meta.xml
<CustomField>
    <fullName>bofc__isCustom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCustom</label>
    <type>Checkbox</type>
</CustomField>