force-app/main/default/objects/bofc__BOFCFieldsAnalyzerResult__c/fields/bofc__isRequired__c.field-meta.xml
<CustomField>
    <fullName>bofc__isRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>