force-app/main/default/objects/bofc__BOFCFieldsAnalyzerResult__c/fields/bofc__Label__c.field-meta.xml
<CustomField>
    <fullName>bofc__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>