force-app/main/default/objects/bofc__BOFCFieldsAnalyzerResult__c/fields/bofc__Populated_On_Percent__c.field-meta.xml
<CustomField>
    <fullName>bofc__Populated_On_Percent__c</fullName>
    <formula>VALUE(
IF(bofc__BOFCFieldsAnalyzer__r.bofc__Records__c = 0, &quot;&quot;, TEXT(bofc__Populated_On__c / bofc__BOFCFieldsAnalyzer__r.bofc__Records__c) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Populated On (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>